--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,4 +4,5 @@ j2ee.server.domain=C:/Users/falve/AppData/Roaming/NetBeans/8.0.2/config/GF_4.1/d
 j2ee.server.home=C:/Program Files/glassfish-4.1/glassfish
 j2ee.server.instance=[C:\\Program Files\\glassfish-4.1\\glassfish;C:\\Program Files\\glassfish-4.1\\glassfish\\domains\\domain1]deployer:gfv3ee6:localhost:4848
 j2ee.server.middleware=C:/Program Files/glassfish-4.1
+selected.browser=Chrome
 user.properties.file=C:\\Users\\falve\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
