Refatoracao do projeto demo

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.sqljdbc4-2.0.jar=C:\\Users\\falve\\OneDrive\\\u00c1rea de Trabalho\\WebPessoas\\ALPOO2sem2019-master\\ALPOO2sem2019-master\\PessoasEnderecosLaboratorio\\sqljdbc4-2.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -44,7 +45,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${libs.hibernate4-support.classpath}
+    ${libs.hibernate4-support.classpath}:\
+    ${file.reference.sqljdbc4-2.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
